--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "author": "Shukhratbek Mamadaliev",
   "license": "ISC",
   "dependencies": {
-    "bootstrap": "^3.3.7"
+    "bootstrap": "^4.1.1"
+  },
+  "devDependencies": {
+    "nodemon": "^1.17.4"
   }
 }
